# advent-of-code

2021/: day1.fsx  day10.fsx  day11.fsx  day12.fsx  day13.fsx  day2.fsx  day3.fsx  day4.fsx  day5.fsx  day6.fsx  day7.fsx  day8.fsx  day9.fsx
2022/: Cargo.toml
2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  helpers.rs
