[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/day1.rs"
name = "day1"

[[bin]]
path = "src/day2.rs"
name = "day2"

[[bin]]
path = "src/day3.rs"
name = "day3"

[[bin]]
path = "src/day4.rs"
name = "day4"

[[bin]]
path = "src/day5.rs"
name = "day5"

[[bin]]
path = "src/day6.rs"
name = "day6"

[[bin]]
path = "src/day7.rs"
name = "day7"

[[bin]]
path = "src/day8.rs"
name = "day8"

[[bin]]
path = "src/day9.rs"
name = "day9"

[[bin]]
path = "src/day10.rs"
name = "day10"

[[bin]]
path = "src/day11.rs"
name = "day11"

[[bin]]
path = "src/day12.rs"
name = "day12"

[[bin]]
path = "src/day13.rs"
name = "day13"

[[bin]]
path = "src/day14.rs"
name = "day14"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "4.0.0"
serde_json = "1.0.89"
itertools = "0.10.5"